// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test: Item details with props 1`] = `
Array [
  <b
    className="block m-1 text-2xl"
  >
    hey
  </b>,
  <p
    className="bg-yellow p-2 rounded-r-full m-1 text-black inline-block "
  >
    proudctDetail.price
    : $ 
    10
  </p>,
  <b
    className="block m-1 mt-3"
  >
     
    proudctDetail.description
  </b>,
  <p
    className=" m-1 mt-2 text-black bg-white rounded shadow-inner p-3 text-justify"
  >
    hello
  </p>,
]
`;

exports[`Test: Item details without any props 1`] = `
Array [
  <b
    className="block m-1 text-2xl"
  >
    
  </b>,
  <p
    className="bg-yellow p-2 rounded-r-full m-1 text-black inline-block "
  >
    proudctDetail.price
    : $ 
    0
  </p>,
  <b
    className="block m-1 mt-3"
  >
     
    proudctDetail.description
  </b>,
  <p
    className=" m-1 mt-2 text-black bg-white rounded shadow-inner p-3 text-justify"
  >
    
  </p>,
]
`;
